# okular

./: .clang-tidy  .craft.ini  .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  AUTHORS  CMakeLists.txt  COPYING  COPYING.DOC  ChangeLog  DESIGN.kpdf  INSTALL  Kdvi.kdelnk  MERGE-STATUS  Mainpage.dox  Makefile.am  Makefile.cvs  Messages.sh  Okular5Config.cmake.in  Okular6Config.cmake.in  OkularConfig.cmake  OkularConfig.cmake.in  OkularConfigureChecks.cmake  README  README.clang-format  README.kdvi  README.md  README.xpdf  TODO  TeXFont.cpp  TeXFont.h  TeXFontDefinition.cpp  TeXFontDefinition.h  TeXFont_PFB.cpp  TeXFont_PFB.h  TeXFont_PK.cpp  TeXFont_PK.h  (+206 more)
active/: CMakeLists.txt
autotests/: CMakeLists.txt  addremoveannotationtest.cpp  annotationclipboardtest.cpp  annotationstest.cpp  annotationtoolbartest.cpp  calculatetexttest.cpp  check_distinguished_name_parser.cpp  closedialoghelper.cpp  closedialoghelper.h  darkreadermanualtest.cpp  documenttest.cpp  editannotationcontentstest.cpp  editdrawingtooldialogtest.cpp  editdrawingtooldialogtest.h  editformstest.cpp  formattest.cpp  generatorstest.cpp  jsfunctionstest.cpp  keystroketest.cpp  kjsfunctionstest.cpp  mainshelltest.cpp  markdowntest.cpp  modifyannotationpropertiestest.cpp  parttest.cpp  searchtest.cpp  shelltest.cpp  signatureformtest.cpp  signunsignedfieldtest.cpp  suggestedfilenametest.cpp  testingutils.cpp  testingutils.h  toggleactionmenutest.cpp  translateannotationtest.cpp  urldetecttest.cpp  visibilitytest.cpp
conf/: CMakeLists.txt  Makefile.am  dlgaccessibility.cpp  dlgaccessibility.h  dlgaccessibility.ui  dlgaccessibilitybase.ui  dlgannotations.cpp  dlgannotations.h  dlgannotationsbase.ui  dlgdebug.cpp  dlgdebug.h  dlgeditor.cpp  dlgeditor.h  dlgeditorbase.ui  dlggeneral.cpp  dlggeneral.h  dlggeneral.ui  dlggeneral.ui.h  dlggeneralbase.ui  dlgidentity.cpp  dlgidentity.h  dlgidentitybase.ui  dlgperformance.cpp  dlgperformance.h  dlgperformance.ui  dlgperformance.ui.h  dlgperformancebase.ui  dlgpresentation.cpp  dlgpresentation.h  dlgpresentation.ui  dlgpresentationbase.ui  editannottooldialog.cpp  editannottooldialog.h  editdrawingtooldialog.cpp  editdrawingtooldialog.h  kpdf.kcfg  oKular.kcfg  okular.kcfg  okular_core.kcfg  okular_core.kcfg.in  (+10 more)
core/: CMakeLists.txt  Makefile.am  action.cpp  action.h  annotations.cpp  annotations.h  annotations_p.h  area.cpp  area.h  audioplayer.cpp  audioplayer.h  audioplayer_p.h  bookmarkmanager.cpp  bookmarkmanager.h  chooseenginedialog.cpp  chooseenginedialog.h  chooseenginedialog.ui  chooseenginedialog_p.h  chooseenginewidget.ui  configinterface.h  debug.cpp  debug_p.h  document.cpp  document.h  document_p.h  documentcommands.cpp  documentcommands_p.h  fileprinter.cpp  fileprinter.h  fontinfo.cpp  fontinfo.h  form.cpp  form.h  form_p.h  generator.cpp  generator.h  generator_p.cpp  generator_p.h  global.h  guiinterface.h  (+65 more)
doc/: CMakeLists.txt  KDVI-features.dvi  KDVI-features.tex  Makefile.am  aboutkde.ps  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html  index.cvlog  index.docbook  index.html  index.nif  index.sgml  kdvi-search.el  man-okular.1.docbook  srcltx.sty  srctex.sty
generators/: CMakeLists.txt  Makefile.am  configure.in.bot  configure.in.in
goo/: GHash.cc  GHash.h  GList.cc  GList.h  GString.cc  GString.h  Makefile.am  gfile.cc  gfile.h  gmem.c  gmem.h  gmempp.cc
kpathsea/: AUTHORS  CONFIGURE  ChangeLog  HIER  INSTALL  Makefile.am  Makefile.in  NEWS  README  absolute.c  absolute.h  access.c  acconfig.h  acinclude.m4  aclocal.m4  basename.c  c-auto.h.in  c-auto.in  c-ctype.h  c-dir.h  c-errno.h  c-fopen.h  c-limits.h  c-memstr.h  c-minmax.h  c-namemx.h  c-pathch.h  c-pathmx.h  c-proto.h  c-stat.h  c-std.h  c-unistd.h  c-vararg.h  cnf.c  cnf.h  common.ac  concat.c  concat3.c  concatn.c  concatn.h  (+124 more)
kpdf/: Makefile.am  QOutputDev.cpp  QOutputDev.h  QOutputDevKPrinter.cpp  QOutputDevKPrinter.h  QOutputDevPixmap.cpp  QOutputDevPixmap.h  TODO  document.cpp  document.h  generator.cpp  generator.h  generator_pdf.cpp  generator_pdf.h  kpdf.desktop  kpdf.svgz  kpdf_canvas.cpp  kpdf_canvas.h  kpdf_dcop.h  kpdf_error.cpp  kpdf_error.h  kpdf_pagewidget.cc  kpdf_pagewidget.h  kpdf_part.cpp  kpdf_part.desktop  kpdf_part.h  kpdf_part.rc  kpdf_shell.cpp  kpdf_shell.h  kpdf_shell.rc  link.cpp  link.h  main.cpp  page.cpp  page.h  pageview.cpp  pageview.h  pageviewutils.cpp  pageviewutils.h  part.cpp  (+21 more)
pix/: CMakeLists.txt  Makefile.am  back.xpm  crsc-app-kdvi.svgz  fileopen.xpm  fileprint.xpm  finish.xpm  forward.xpm  forwpage.xpm  hisc-app-kdvi.svgz  kdvi.xpm  large-kdvi.xpm  largetext.xpm  mini-kdvi.xpm  reload.xpm  smalltext.xpm  start.xpm  viewmag+.xpm  viewmag-.xpm
shell/: CMakeLists.txt  MacOSXBundleInfo.plist.in  Makefile.am  kpdf.desktop  main.cpp  oKular.desktop  okular.desktop  okular_main.cpp  okular_main.h  org.kde.okular.appdata.xml  org.kde.okular.desktop  recentitemsmodel.cpp  recentitemsmodel.h  shell.cpp  shell.h  shell.qrc  shell.rc  shellutils.cpp  shellutils.h  welcomescreen.cpp  welcomescreen.h  welcomescreen.ui
splash/: Makefile.am  Splash.cc  SplashClip.cc  SplashClip.h  SplashFTFont.cc  SplashFTFont.h  SplashFTFontEngine.cc  SplashFTFontEngine.h  SplashFTFontFile.cc  SplashFont.cc  SplashFont.h  SplashFontEngine.cc  SplashMath.h  SplashPath.cc  SplashPath.h  SplashPattern.cc  SplashScreen.cc  SplashScreen.h  SplashState.h  SplashT1Font.cc  SplashT1FontEngine.cc  SplashT1FontEngine.h  SplashT1FontFile.cc  SplashT1FontFile.h  SplashXPath.cc  SplashXPathScanner.cc  SplashXPathScanner.h
tests/: CMakeLists.txt  addremoveannotationtest.cpp  annotationstest.cpp  documenttest.cpp  editannotationcontentstest.cpp  editformstest.cpp  epubinternallinkstest.cpp  epubtest.cpp  mainshelltest.cpp  modifyannotationpropertiestest.cpp  parttest.cpp  searchtest.cpp  shelltest.cpp  testingutils.cpp  translateannotationtest.cpp  urldetecttest.cpp
ui/: CMakeLists.txt  Makefile.am  animatedwidget.cpp  animatedwidget.h  annotationactionhandler.cpp  (+116 more)
(+2587 files in other folders)
